allow secrets manager

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 AWS_REGION=your_aws_region
 SQS_QUEUE_URL=your_sqs_queue_url
+DB_SECRET_NAME=your_db_secret_name
 DB_HOST=your_database_host
 DB_PORT=your_database_port
 DB_NAME=your_database_name
